# ESP32-RaspberryPi-MQTT-System

./: LICENSE  README.md
ESP32/: CMakeLists.txt
ESP32/components/BSP/: CMakeLists.txt
ESP32/components/BSP/KEY/: key.c  key.h
ESP32/components/BSP/LED/: LED.c  LED.h
ESP32/components/BSP/MQTT/: mqtt.c  mqtt.h
ESP32/main/: main.c
RaspberryPi/: mqtt_pub.sh  mqtt_setup.sh  mqtt_start_broker.sh  mqtt_sub.sh  ngrok_setup.sh  ngrok_start.sh
